--- a/src/app/components/exercice1/exercice1.component.scss
+++ b/src/app/components/exercice1/exercice1.component.scss
@@ -14,7 +14,7 @@ h1 {
   transform: translateX(-50%) rotate(180deg);
   width: 300px;
   height: 300px;
-  background: #000 url(horloge.png) no-repeat center;
+  background: #000 url(https://raw.githubusercontent.com/DemdoumIkram/Tp_Angular/master/src/app/components/exercice1/horloge.png) no-repeat center;
   background-color: rgba(11, 16, 22, 0.726);
   background-size: 300px;
   border-radius: 50%;
