--- a/src/app/components/exercice2/exercice2.component.scss
+++ b/src/app/components/exercice2/exercice2.component.scss
@@ -1,1 +1,8 @@
 @import "../../../assets/materialize/css/materialize.min.css";
+@import url(https://fonts.googleapis.com/css?family=Raleway:700);
+
+h1 {
+  font-family: 'Raleway';
+  text-align: center;
+  margin-top: 50px;
+}
