--- a/src/app/components/exercice2/exercice2.component.html
+++ b/src/app/components/exercice2/exercice2.component.html
@@ -1,5 +1,5 @@
 <app-header [title]="'Exercice 2'"></app-header>
-
+<h1>les derniers films du Box Office</h1>
 <div class="carousel" >
     <a class="carousel-item" *ngFor="let film of data">
   <img  src='https://image.tmdb.org/t/p/w600_and_h900_bestv2{{film.poster_path}}'  />
